# leetfut

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml  Dockerfile
backend/src/: cache.rs  main.rs  routes.rs
backend/src/leetcode/: client.rs  mod.rs  signals.rs
backend/src/scoring/: attributes.rs  constants.rs  engine.rs  mod.rs  playstyles.rs  types.rs
plans/: 2026-07-04-leetfut-backend.md
specs/: 2026-07-04-leetfut-design.md
web/: next.config.ts  package-lock.json  package.json
web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/app/[username]/vs/[opponent]/: opengraph-image.tsx  page.tsx
web/app/api/card-image/[username]/: route.tsx
web/app/api/card/[username]/: route.ts
web/app/u/[username]/: ScoutRoute.tsx  opengraph-image.tsx  page.tsx
web/components/: AppShell.tsx  Background.tsx  BuyMeACoffee.tsx  CardActions.tsx  CardFan.tsx  DuelButton.tsx  DuelView.tsx  FlagPicker.tsx  FooterCredit.tsx  HowItWorksModal.tsx  LoadingScreen.tsx  Mascot.tsx  PlayerCard.tsx  ResultView.tsx  ScoutForm.tsx  ScoutReport.tsx  StatRadar.tsx  StoryFrame.tsx  VsBurst.tsx  finishTheme.ts
web/hooks/: useReveal.ts  useScout.ts
web/lib/: api.ts  capture.ts  constants.ts  duel.ts  format.ts  puns.ts  radar.ts  reveal.ts  samples.ts  share.ts  site.ts  types.ts
web/lib/og/: renderCard.tsx
web/tests/: duel.test.ts  duelThemes.test.ts  radar.test.ts  reveal.test.ts  share.test.ts  site.test.ts
