[package]
name = "leetfut-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
